--- a/main.css
+++ b/main.css
@@ -11,7 +11,6 @@ nav {
     display: flex;
     justify-content: space-between;
     padding: 13px 15px;
-    position: fixed;
 }
 
 nav h4 {
@@ -29,41 +28,31 @@ nav h4 {
     font-variant-caps: all-small-caps;
 }
 
-.banner {
-    width: 100vw;
-    min-height: 600px;
-    max-height: 90vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    background-image: url(https://www.dbta.com/Images/Default.aspx?ImageID=19031);
-}
+body {
+    padding: 0;
+    margin: 0;
+    background: rgb(209, 194, 172);
+  }
 
-.banner h1 {
-    font-size: 100px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-.banner h2 {
+  .banner {
+    margin: 250px auto;
+    padding: 100px 50px;
+    background-color: #e9d1b3;
+    overflow: hidden;
+    width: 75%;
+    border-radius: 4px;
+    align-self: center;
+  }
+  
+  .banner h1 {
+      font-size: 50px;
+      text-align: center;
+  }
+  
+  .banner h2 {
+    text-align: center;
+    line-height: 24px;
+    font-family: 'Raleway', sans-serif;
     font-size: 30px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
-.languages h1 {
-    font-size: 50px;
-    text-indent: 40%;
-    padding: 20px 0px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.languages a {
-    font-size: 25px;
-    padding: 6px 214.9px;
-    background: #555;
-    color: #fff;
-    text-decoration: none;
-    font-variant-caps: all-petite-caps;
-    margin: 2px;
-}
+    font-weight: 400;
+  }
