--- a/main.css
+++ b/main.css
@@ -3,3 +3,32 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.banner {
+    background-image: url("");
+    min-height: 500px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+nav {
+    justify-content: space-between;
+    display: flex;
+    background-color: black;
+    color: white;
+    height: 30px;
+    align-items: center;
+}
+
+nav h3 {
+    font-variant-caps: all-small-caps;
+    padding: 15px, 10px;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+    padding: 15px, 10px;
+}
