--- a/main.css
+++ b/main.css
@@ -4,15 +4,6 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.banner {
-    background-image: url("");
-    min-height: 500px; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 nav {
     justify-content: space-between;
     display: flex;
@@ -36,4 +27,31 @@ nav a {
     padding: 5px;
     margin: 5px;
     font-weight: bold;
+}
+
+#container {
+    position: relative;
+    margin: 0, auto;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+#banner {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    color:black;
+    text-align:center;
+}
+
+#parallax {
+    z-index:-1;
+    position:fixed;
+    width:100%;
+    height:100%;
+    background:url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1652&q=80') center no-repeat transparent;
+    background-size:cover;
 }
