--- a/main.css
+++ b/main.css
@@ -4,13 +4,20 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body, html {
+    height: 100%;
+}
+
 nav {
     justify-content: space-between;
     display: flex;
-    background-color: whitesmoke;
-    color: rgb(44, 44, 44);
+    background-color: rgb(48, 47, 47);
+    color: whitesmoke;
     height: 50px;
     align-items: center;
+    position: fixed;
+    width: 100vw;
+    padding-left: 8px;
 }
 
 nav h3 {
@@ -21,7 +28,7 @@ nav h3 {
 
 nav a {
     text-decoration: none;
-    color: rgb(44, 44, 44);
+    color: whitesmoke;
     padding: 15px, 10px;
     font-size: 20px;
     padding: 5px;
@@ -29,29 +36,52 @@ nav a {
     font-weight: bold;
 }
 
+#contact {
+    padding-right: 8px;
+} 
+
 #container {
-    position: relative;
-    margin: 0, auto;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+  position: relative;
+  margin: 0, auto;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 #banner {
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    color:black;
-    text-align:center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+}
+
+#banner h1, h2 {
+  margin: 20px, 0;
+}
+
+#banner h1 {
+  font-size: 60px;
 }
 
 #parallax {
-    z-index:-1;
-    position:fixed;
-    width:100%;
-    height:100%;
-    background:url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1652&q=80') center no-repeat transparent;
-    background-size:cover;
+    z-index: -1;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: url("https://preview.ibb.co/ezhKNb/luca_bravo_210213.jpg") center no-repeat transparent;
+    background-size: cover;
+}
+
+#about {
+	margin: 0, auto;
+    padding: 20px;
+    background: white;
+}
+
+#about p {
+	margin: 20px, 0;
+    width: 98%;
 }
