--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ nav a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: white;
+  color: rgb(48, 47, 47);
   text-align: center;
 }
 
@@ -71,7 +71,7 @@ nav a {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: url("https://preview.ibb.co/ezhKNb/luca_bravo_210213.jpg") center no-repeat transparent;
+    background: url("https://www.ambius.com/blog/wp-content/uploads/2015/08/ultimate-guide-to-office-plants.png") center no-repeat transparent;
     background-size: cover;
 }
 
