--- a/main.css
+++ b/main.css
@@ -71,7 +71,7 @@ nav a {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: url("https://www.ambius.com/blog/wp-content/uploads/2015/08/ultimate-guide-to-office-plants.png") center no-repeat transparent;
+    background-image: url(/home/database/Portfolio/banner-image.jpg) center no-repeat;
     background-size: cover;
 }
 
