--- a/main.css
+++ b/main.css
@@ -71,7 +71,7 @@ nav a {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-image: url(/home/database/Portfolio/banner-image.jpg) center no-repeat;
+    background-image: url(banner-image.jpg) center no-repeat;
     background-size: cover;
 }
 
