--- a/main.css
+++ b/main.css
@@ -70,7 +70,7 @@ nav a {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-image: url(banner-image.jpg);
+    background-image: url(media/banner-image.jpg);
     background-size: cover;
 }
 
