--- a/main.css
+++ b/main.css
@@ -72,6 +72,7 @@ nav a {
     height: 100%;
     background-image: url(media/banner-image.jpg);
     background-size: cover;
+    opacity: 0.8;
 }
 
 #about {
