--- a/main.css
+++ b/main.css
@@ -1,45 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-body, html {
-    height: 100%;
-}
-
-nav {
-    display: flex;
-    background-color: rgb(48, 47, 47);
-    color: whitesmoke;
-    height: 50px;
-    align-items: center;
-    position: fixed;
-    width: 100vw;
-    padding-left: 8px;
-}
-
-nav h3 {
-    font-variant-caps: all-small-caps;
-    font-size: 25px;
-    text-indent: 5px;
-}
-
-nav a {
-    text-decoration: none;
-    color: whitesmoke;
-    padding: 15px, 10px;
-    font-size: 20px;
-    padding: 5px;
-    margin: 5px;
-    font-weight: bold;
-}
-
-#about_link {
-  padding-left: 66vw;
-  cursor: pointer;
-}
-
+/*
 #container {
   position: relative;
   margin: 0, auto;
@@ -85,4 +44,4 @@ nav a {
 #about p {
 	margin: 20px, 0;
   width: 98%;
-}
+} */
