--- a/main.css
+++ b/main.css
@@ -66,7 +66,6 @@ h1, h2, h3, h4 {
   letter-spacing: var(--spacing);
   text-transform: capitalize;
   line-height: 1.25;
-  margin-bottom: 0.75rem;
   font-family: var(--ff-primary);
 }
 
@@ -164,16 +163,11 @@ nav {
   overflow: hidden;
 }
 
-.parallax {
-  z-index: -1;
-  position: fixed;
-}
-
-.banner h1 {
+#banner h1 {
   padding: 299px 600px 0px 600px;
 }
 
-.banner h2 {
+#banner h2 {
   padding-bottom: 286px;
   padding-left: 405px;
 }
@@ -181,4 +175,20 @@ nav {
 #about {
   background-color: var(--clr-white);
   padding: 20px;
+}
+
+#about h2 {
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+#tools {
+  background-color: var(--clr-white);
+
+}
+
+#tools h2 {
+  display: flex;
+  justify-content: center;
 }
