--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
   --clr-primary-2: hsl(205, 77%, 27%);
   --clr-primary-3: hsl(205, 72%, 37%);
   --clr-primary-4: hsl(205, 63%, 48%);
-  --clr-primary-5: #49a6e9;
+  --clr-primary-5: hsl(205, 78%, 60%);
   --clr-primary-6: hsl(205, 89%, 70%);
   --clr-primary-7: hsl(205, 90%, 76%);
   --clr-primary-8: hsl(205, 86%, 81%);
@@ -190,4 +190,8 @@ nav {
 #tools h2 {
   display: flex;
   justify-content: center;
+}
+
+.fab, .fas {
+  color: var(--clr-primary-5);
 }
